apps/portainer/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portainer-virtual-service
  namespace: portainer
spec:
  hosts:
  - "docker.secfam.cloud"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9000
        host: portainer.portainer.svc.cluster.local
